--- a/index.html
+++ b/index.html
@@ -527,7 +527,8 @@
     		&copy; 2019 许恩浩
     	</div>
       	<div class="footer-right">
-      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
+		<a href="https://beian.miit.gov.cn/" target="_blank">京ICP备19037842号-1</a>
+<!--       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten -->
       	</div>
     </div>
   </div>
